[package]
name = "rs-linkfusion"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "複数WAN/LAN/WiFiインターフェースをaggligatorで束ね(ボンディング)、通信の高速化・安定化を実現するTCPポートフォワーダー。CPU/GPU/NPUハードウェアアクセラレータ抽象化(accel)とIOWN/APN×Smart-TCP品質適応制御(RS-SmartTCP)を統合。"
repository = "https://github.com/aon-co-jp/RS-LinkFusion"

[[bin]]
name = "rs-linkfusion"
path = "src/main.rs"

[dependencies]
aggligator = "0.9"
aggligator-transport-tcp = { version = "0.2", default-features = false }
rs-smarttcp = { path = "../RS-SmartTCP" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
flate2 = "1.0"
chacha20poly1305 = "0.10"
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
